# ralph-ollama-standalone

./: .gitignore  @fix_plan.md  CHANGELOG.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  COPY_COMPLETE.md  DEMO_RESULTS.md  IMPROVEMENTS_AND_SIMPLIFICATIONS.md  MANIFEST.in  NEXT_STEPS.md  PROJECT_INFO.md  QUICK-START.md  README.md  REVIEW_ASSESSMENT.md  SETUP_STATUS.md  STANDALONE_SETUP.md  STATUS.md  TEST_RESULTS.md  USAGE.md  activate-venv.sh  package.json  pyproject.toml  requirements.txt  run_tests.sh  setup-venv.sh
.cursor/rules/: INDEX.md  PERSONAS.md  README.md  ralph-completion.mdc  ralph-core.mdc  ralph-devops.mdc  ralph-docs.mdc  ralph-ollama.mdc  ralph-priorities.mdc  ralph-product-owner.mdc  ralph-qa.mdc  ralph-rate-limits.mdc  ralph-reviewer.mdc  ralph-status.mdc
.github/scripts/: run-e2e-tests.sh  setup-ollama.sh
.github/workflows/: e2e.yml  lint.yml  package.yml  test.yml
config/: ollama-config.json  workflow-config.json
docs/: API.md  ARCHITECTURE.md  CI_CD.md  CODE-IMPROVEMENT.md  INSTALLATION.md  INTEGRATION.md  MODEL-GUIDE.md  SETUP.md  TROUBLESHOOTING.md
docs/archive/: ARCHITECTURAL_REVIEW.md  COMPLETION_SUMMARY.md  CONTINUOUS_WORKFLOW.md  GENERATED_EXAMPLE.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  REFACTORING.md  SETUP_STATUS.md  STATUS.md
examples/: README.md  advanced_usage.py  create_something.py  error_handling.py  ralph_workflow_demo.py  simple_example.py
integration/: README.md  __init__.py  ralph_ollama_adapter.py
lib/: __init__.py  code_validator.py  config.py  config_models.py  exceptions.py  file_tracker.py  logging_config.py  metrics.py  ollama_client.py  path_utils.py  ralph_loop_engine.py  response_cache.py
lib/ralph_loop_engine/: __init__.py  error_recovery.py  phases.py  progress_tracker.py  status_logger.py  (+2 more)
scripts/: RALPH_LOOP_QUICKSTART.md  RALPH_LOOP_USAGE.md  improve-code.py  improve-code.sh  model-manager.sh  ralph-loop.py  ralph-loop.sh  ralph-ollama.sh  setup-ollama.sh
test-reports/: ralph-loop-e2e.xml  ui-e2e.xml
tests/: README.md  conftest.py  conftest_browser.py  test_adapter.py  test_config.py  test_connection.py  test_ollama_client.py  test_package_installation.py  test_ralph_loop_e2e.py  test_ralph_loop_engine.py  test_ui_browser_e2e.py  test_ui_e2e.py
ui/: README.md  app.py  start.sh  test-ui.py
(+12 files in other folders)
