[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-ollama"
version = "1.0.0"
description = "Ralph Ollama integration - Use local LLM with Ollama for development workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ralph Ollama Contributors"}
]
keywords = ["ollama", "llm", "local", "ai", "ralph", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Tools",
]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
ui = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ralph-ollama-standalone"
Documentation = "https://github.com/yourusername/ralph-ollama-standalone#readme"
Repository = "https://github.com/yourusername/ralph-ollama-standalone"
Issues = "https://github.com/yourusername/ralph-ollama-standalone/issues"

[project.scripts]
ralph-ollama = "lib.ollama_client:main"

[tool.setuptools]
packages = ["lib", "integration"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "flask.*",
    "flask_cors.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
